--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
 	<!--[if IE]><script type="text/javascript" src="ie.js"></script><![endif]-->
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="wrapper">
+    <%= render "layouts/header" %>
+    <%= yield %>
+    <%= render "layouts/footer" %>
+  </div>
 </body>
 </html>
