--- a/app/views/pages/_footer.html.haml
+++ b/app/views/pages/_footer.html.haml
@@ -1,7 +1,7 @@
 %footer#footer
   %nav.footer-nav
     %ul
-      = render "layouts/menu"
+      = render "menu"
   .footer-panel
     .row
       .col-md-12
