--- a/app/views/pages/_header.html.haml
+++ b/app/views/pages/_header.html.haml
@@ -5,4 +5,4 @@
       .navigation-block
         %span.opener-nav
         %ul.navigation
-          = render "layouts/menu"
+          = render "menu"
